  UPDATE t { attr := v }.

- Duro D/T: Added D_INSERT and I_DELETE. RDB_ma_insert and RDB_ma_vdelete
  now contain a flags field which must be initialized when a pointer
  to the respective structure is passed to RDB_multi_assign().

- Duro D/T: Tuple attributes are now allowed as a target in INSERT, D_INSERT,
  DELETE, I_DELETE, and LOAD.

- If the evaluation of an expression fails Duro D/T no longer retries with
  a transaction to read operators from the catalog.
  Replaced Duro_evaluate_retry() and  Duro_expr_type_retry() by Duro_evaluate()
  and Duro_expr_type().

- Added function Duro_evaluate() which does not start a transaction.

- Changed RDB_add_table() which now takes an optional RDB_database argument.
  Added a db argument to duro::table add.

- Database environments are by default opened with the DB_CREATE flag.

- Dropped RDB_get_update_op_e(). RDB_get_update_op() now has the same signature
  as RDB_get_update_op_e() previously had.

- RDB_rollback_all() is available in rdb.h.

- Added arguments getfnp and getarg to RDB_extend_tuple() for retrieving
  variables.

- Added type datetime.

- Creation time of user-defined operators is stored in the catalog.

- Fixed a bug in the handling of string literals in user-defined operators.

- Generic tuple types now allowed in operator parameters.

- Replaced fatal_error by data_corruption_error and run_recovery_error.

- Java interface: DException now extends RuntimeException.

- Added built-in read-only operators strfind_b(), substr_b(), and strlen_b().

DuroDBMS 0.25

- Added support for modules.

- I/O, system, and www operators are now in system-provided modules io, sys,
  and www, respectively. 

- Fixed bug in opening secondary indexes that could cause index corruption.

- Assignment of virtual and public tables using := is now supported.

- Added RDB_drop_table_by_name(), solving the problem of dropping unmapped
  public tables.

- DROP VAR and RENAME VAR are now generally prohibited in FOR .. IN loops.
