@@ -18,6 +18,8 @@ DuroDBMS 0.26
 - Duro D/T: Tuple attributes are now allowed as a target in INSERT, D_INSERT,
   DELETE, I_DELETE, and LOAD.
 
+- form_to_tuple() is now in package net.
+
 - If the evaluation of an expression fails Duro D/T no longer retries with
   a transaction to read operators from the catalog.
   Replaced Duro_evaluate_retry() and  Duro_expr_type_retry() by Duro_evaluate()
